@@ -1,3 +1,6 @@
+20220601:
+ * added version, path, skip_install and post_deps to IC 
+
 20220530:
  * updated ic automation to read tmp-run-state.json 
    and merge it with the "new_state" dict
